--- a/Python/Makefile.in
+++ b/Python/Makefile.in
@@ -213,6 +213,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 TESTLIBRARY_BUILD_DIR = $(abs_builddir)/build
 TESTLIBRARY_SRC_DIR = $(abs_top_srcdir)/Python
+TESTLIBRARY_BUILD_DIR64 = $(abs_builddir)/build64
 all: all-am
 
 .SUFFIXES:
@@ -296,7 +297,9 @@ distdir: $(DISTFILES)
 check-am: all-am
 	$(MAKE) $(AM_MAKEFLAGS) check-local
 check: check-am
-all-am: Makefile
+@JM_WIN64_FALSE@all-local:
+@WITH_PYTHON64_FALSE@all-local:
+all-am: Makefile all-local
 installdirs:
 install: install-am
 install-exec: install-exec-am
@@ -391,17 +394,18 @@ uninstall-am:
 
 .MAKE: check-am install-am install-strip
 
-.PHONY: all all-am check check-am check-local clean clean-generic \
-	clean-libtool clean-local distclean distclean-generic \
-	distclean-libtool distdir dvi dvi-am html html-am info info-am \
-	install install-am install-data install-data-am install-dvi \
-	install-dvi-am install-exec install-exec-am install-exec-local \
-	install-html install-html-am install-info install-info-am \
-	install-man install-pdf install-pdf-am install-ps \
-	install-ps-am install-strip installcheck installcheck-am \
-	installdirs maintainer-clean maintainer-clean-generic \
-	mostlyclean mostlyclean-generic mostlyclean-libtool pdf pdf-am \
-	ps ps-am uninstall uninstall-am
+.PHONY: all all-am all-local check check-am check-local clean \
+	clean-generic clean-libtool clean-local distclean \
+	distclean-generic distclean-libtool distdir dvi dvi-am html \
+	html-am info info-am install install-am install-data \
+	install-data-am install-dvi install-dvi-am install-exec \
+	install-exec-am install-exec-local install-html \
+	install-html-am install-info install-info-am install-man \
+	install-pdf install-pdf-am install-ps install-ps-am \
+	install-strip installcheck installcheck-am installdirs \
+	maintainer-clean maintainer-clean-generic mostlyclean \
+	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
+	uninstall uninstall-am
 
 
 $(TESTLIBRARY_BUILD_DIR):
@@ -418,14 +422,25 @@ $(TESTLIBRARY_BUILD_DIR):
 	cmake -DCMAKE_INSTALL_DIR:PATH=$(prefix) $(TESTLIBRARY_SRC_DIR) -DTOP_SRC=$(abs_top_srcdir) ;; \
 	esac
 
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@${TESTLIBRARY_BUILD_DIR64}:
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	mkdir -p $(TESTLIBRARY_BUILD_DIR64) && \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	cd $(TESTLIBRARY_BUILD_DIR64) && \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	cmake -G "MSYS Makefiles" -DCMAKE_C_FLAGS="-m64" -DCMAKE_Fortran_FLAGS="-m64" -DCMAKE_INSTALL_DIR:PATH=$(prefix) $(TESTLIBRARY_SRC_DIR) -DTOP_SRC=$(abs_top_srcdir)
+
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@all-local: $(TESTLIBRARY_BUILD_DIR) ${TESTLIBRARY_BUILD_DIR64}
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	cd $(TESTLIBRARY_BUILD_DIR) && VERBOSE=1 make $(AM_MAKEFLAGS) install
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	cd $(TESTLIBRARY_BUILD_DIR64) && VERBOSE=1 make $(AM_MAKEFLAGS) install
+
 install-exec-local: $(TESTLIBRARY_BUILD_DIR)
 	cd $(TESTLIBRARY_BUILD_DIR) && VERBOSE=1 make $(AM_MAKEFLAGS) install
 
 check-local:
-	cd $(TESTLIBRARY_BUILD_DIR) && $(MAKE) $(AM_MAKEFLAGS) test
+	cd $(TESTLIBRARY_BUILD_DIR) && $(MAKE) $(AM_MAKEFLAGS) clean
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	cd $(TESTLIBRARY_BUILD_DIR64) && $(MAKE) $(AM_MAKEFLAGS) clean
 
 clean-local:
 	-cd $(TESTLIBRARY_BUILD_DIR) && $(MAKE) $(AM_MAKEFLAGS) clean
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	cd $(TESTLIBRARY_BUILD_DIR64) && $(MAKE) $(AM_MAKEFLAGS) clean
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
