--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -389,66 +389,44 @@ AM_CONDITIONAL([HAVE_ANT],[test "x$ANT" != x])
 AS_IF([test "x$ANT" = x],
       [AC_MSG_FAILURE([Cannot find Apache Ant - please install in order to build compiler front-ends.])])
 
+AC_DEFUN([PYTHON_DISTRO_CHECK],
+[   
 # Detect if Python installation is specified with environment var
-AC_ARG_VAR(PYTHON_HOME, [Python installation to use])
-AS_IF([test "${PYTHON_HOME}"],
+AC_ARG_VAR($1, [Python $7 installation to use])
+AS_IF([test "${$1}"],
       [
-          PYTHON_HOME_ABS="`cd ${PYTHON_HOME}; pwd`"
-          AC_MSG_RESULT([Using Python installation ${PYTHON_HOME_ABS}])
-          CMAKE_PYTHON_LIB="-DPYTHON_LIBRARY=${PYTHON_HOME_ABS}/libs/libpython27.a"
-          CMAKE_PYTHON_INCLUDE="-DPYTHON_INCLUDE_DIR=${PYTHON_HOME_ABS}/include"
+          $2="`cd ${$1}; pwd`"
+          AC_MSG_RESULT([Using Python $7 installation ${$2}])
+          $5="-DPYTHON_LIBRARY=${$2}/libs/libpython27.a"
+          $6="-DPYTHON_INCLUDE_DIR=${$2}/include"
       ], [
-          AS_IF([test "${PYTHON_LIB}" && test "${PYTHON_INCLUDE}"], 
+          AS_IF([test "${$3}" && test "${$4}"], 
             [
-                AC_MSG_RESULT([Using Python lib ${PYTHON_LIB} and Python include ${PYTHON_INCLUDE}])
-                CMAKE_PYTHON_LIB="-DPYTHON_LIBRARY=${PYTHON_LIB}"
-                CMAKE_PYTHON_INCLUDE="-DPYTHON_INCLUDE_DIR=${PYTHON_INCLUDE}"
+                AC_MSG_RESULT([Using Python lib ${$3} and Python include ${$4}])
+                $5="-DPYTHON_LIBRARY=${$3}"
+                $6="-DPYTHON_INCLUDE_DIR=${$4}"
             ], [
-                AC_MSG_RESULT([Python installation not specified.])
+                AC_MSG_RESULT([Python $7 installation not specified.])
                 # Empty arguments will make cmake fail, so use dummies instead
-                CMAKE_PYTHON_LIB="-DPYTHON_LIBRARY_DUMMY="
-                CMAKE_PYTHON_INCLUDE="-DPYTHON_INCLUDE_DIR_DUMMY="
+                $5="-DPYTHON_LIBRARY_DUMMY="
+                $6="-DPYTHON_INCLUDE_DIR_DUMMY="
             ])
       ])
-AC_SUBST(CMAKE_PYTHON_LIB)
-AC_SUBST(CMAKE_PYTHON_INCLUDE)
+AC_SUBST($5)
+AC_SUBST($6)
+AC_SUBST($1)
+$1=$$2
+])
 
-
-AC_SUBST(PYTHON_HOME)
+PYTHON_DISTRO_CHECK([PYTHON_HOME], [PYTHON_HOME_ABS], [PYTHON_LIB], [PYTHON_INCLUDE], [CMAKE_PYTHON_LIB], [CMAKE_PYTHON_INCLUDE], [])
 AC_SUBST(ORIG_PYTHON_HOME)
-PYTHON_HOME=$PYTHON_HOME_ABS
 ORIG_PYTHON_HOME=$PYTHON_HOME_ABS
+   
+PYTHON_DISTRO_CHECK([PYTHON64_HOME], [PYTHON64_HOME_ABS], [PYTHON64_LIB], [PYTHON64_INCLUDE], [CMAKE_PYTHON64_LIB], [CMAKE_PYTHON64_INCLUDE], [64bit])
+AM_CONDITIONAL([WITH_PYTHON64], [test "x$PYTHON64_HOME" != x])
+
 AC_SUBST(ORIG_PATH)
 ORIG_PATH=$PATH
-
-# Detect if Python installation is specified with environment var
-AC_ARG_VAR(PYTHON64_HOME, [Python 64 bit installation to use])
-AS_IF([test "${PYTHON64_HOME}"],
-      [
-          PYTHON64_HOME_ABS="`cd ${PYTHON64_HOME}; pwd`"
-          AC_MSG_RESULT([Using Python 64 installation ${PYTHON64_HOME_ABS}])
-          CMAKE_PYTHON64_LIB="-DPYTHON_LIBRARY=${PYTHON64_HOME_ABS}/libs/libpython27.a"
-          CMAKE_PYTHON64_INCLUDE="-DPYTHON_INCLUDE_DIR=${PYTHON64_HOME_ABS}/include"
-      ], [
-          AS_IF([test "${PYTHON64_LIB}" && test "${PYTHON64_INCLUDE}"], 
-            [
-                AC_MSG_RESULT([Using Python 64 bit lib ${PYTHON64_LIB} and Python include ${PYTHON64_INCLUDE}])
-                CMAKE_PYTHON64_LIB="-DPYTHON_LIBRARY=${PYTHON64_LIB}"
-                CMAKE_PYTHON64_INCLUDE="-DPYTHON64_INCLUDE_DIR=${PYTHON64_INCLUDE}"
-            ], [
-                AC_MSG_RESULT([Python 64 installation not specified.])
-                # Empty arguments will make cmake fail, so use dummies instead
-                CMAKE_PYTHON64_LIB="-DPYTHON_LIBRARY_DUMMY="
-                CMAKE_PYTHON64_INCLUDE="-DPYTHON_INCLUDE_DIR_DUMMY="
-            ])
-      ])
-AC_SUBST(CMAKE_PYTHON64_LIB)
-AC_SUBST(CMAKE_PYTHON64_INCLUDE)
-
-
-AC_SUBST(PYTHON64_HOME)
-PYTHON64_HOME=$PYTHON64_HOME_ABS
-AM_CONDITIONAL([WITH_PYTHON64], [test "x$PYTHON64_HOME" != x])
 
 # Checks for header files.
 AC_HEADER_STDC
