--- a/ModelicaCasADiInterface/CMakeLists.txt
+++ b/ModelicaCasADiInterface/CMakeLists.txt
@@ -4,6 +4,11 @@ project(ModelicaCasADi CXX)
 
 set(Python_ADDITIONAL_VERSIONS 2.7 2.6 2.5 2.4)
 
+if(" ${CMAKE_CXX_FLAGS} " MATCHES " -m64 " AND CMAKE_HOST_WIN32)
+    add_definitions(-DMS_WIN64)
+    message(STATUS "Adding MS_WIN64 definition")
+endif()
+
 function(make_paths_absolute DEST_VAR DIRS)  
   set(ABS_DIRS "")
   foreach(DIR ${DIRS})
