--- a/trunk/Python/Makefile.in
+++ b/trunk/Python/Makefile.in
@@ -97,6 +97,9 @@ INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
+IPOPT64_HOME = @IPOPT64_HOME@
+IPOPT64_INC = @IPOPT64_INC@
+IPOPT64_LIB = @IPOPT64_LIB@
 IPOPT_HOME = @IPOPT_HOME@
 IPOPT_INC = @IPOPT_INC@
 IPOPT_LIB = @IPOPT_LIB@
