--- a/branches/dev/directionalderivatives/Makefile.am
+++ b/branches/dev/directionalderivatives/Makefile.am
@@ -40,7 +40,15 @@ bindistdir=JModelica.org-$(VERSION)-bin
 
 casadi:
 	cd $(abs_builddir)/ThirdParty/CasADi; \
-	make -f Makefile  "SWIGCHECK_BUILD_DIR=$(SWIGCHECK_BUILD_DIR)" "CASADI_BUILD_DIR=$(CASADI_BUILD_DIR)" "IPOPT_HOME=$(IPOPT_HOME)"
+	make -f Makefile  "SWIGCHECK_BUILD_DIR=$(SWIGCHECK_BUILD_DIR)" "CASADI_BUILD_DIR=$(CASADI_BUILD_DIR)" "IPOPT_HOME=$(IPOPT_HOME)" "CASADI_PYTHON_INST_DIR=${CASADI_PYTHON_INST_DIR}" "CASADI_INST_DIR=${CASADI_INST_DIR}" "CASADI_PLUGIN_INST_DIR=${CASADI_PLUGIN_INST_DIR}" "CMAKE_CASADI_ARGS=${CMAKE_CASADI_ARGS}" "CMAKE_CASADI_COMPILER_ARGS=${CMAKE_CASADI_COMPILER_ARGS}" "CMAKE_CASADI_CXX_FLAG=${CMAKE_CASADI_CXX_FLAG}" "CMAKE_PYTHON_LIB=${CMAKE_PYTHON_LIB}"
+if COMPILE_WITH_IPOPT64
+	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:$(PYTHON64_HOME)/Lib:"${PATH}"; \
+	export PYTHONHOME=$(PYTHON64_HOME); \
+	cd $(abs_builddir)/ThirdParty/CasADi; \
+	make -f Makefile  "SWIGCHECK_BUILD_DIR=$(SWIGCHECK_BUILD_DIR64)" "CASADI_BUILD_DIR=$(CASADI_BUILD_DIR64)" "IPOPT_HOME=$(IPOPT64_HOME)" "CASADI_PYTHON_INST_DIR=${CASADI_PYTHON_INST_DIR64}" "CASADI_INST_DIR=${CASADI_INST_DIR64}" "CASADI_PLUGIN_INST_DIR=${CASADI_PLUGIN_INST_DIR64}" "CMAKE_CASADI_ARGS=${CMAKE_CASADI_ARGS64}" "CMAKE_CASADI_COMPILER_ARGS=${CMAKE_CASADI_COMPILER_ARGS64}" "CMAKE_CASADI_CXX_FLAG=${CMAKE_CASADI_CXX_FLAG64}" "CMAKE_PYTHON_LIB=${CMAKE_PYTHON64_LIB}" "CMAKE_PYTHON_INCLUDE=${CMAKE_PYTHON64_INCLUDE}"
+	export PYTHONHOME=$(ORIG_PYTHON_HOME); \
+	export PATH="$(ORIG_PATH)";
+endif
 
 install_casadi: casadi
 	cd $(abs_builddir)/ThirdParty/CasADi; \
@@ -49,7 +57,18 @@ install_casadi: casadi
 	cp -r $(abs_builddir)/casadi_install/casadi $(DESTDIR)$(prefix)/Python/
 	## temp fix
 	cp $(abs_builddir)/casadi_build/swig/casadi_core.py $(DESTDIR)$(prefix)/Python/casadi
-
+if COMPILE_WITH_IPOPT64  
+	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:$(PYTHON64_HOME)/Lib:"${PATH}"; \
+	export PYTHONHOME=$(PYTHON64_HOME);  
+	cd $(abs_builddir)/ThirdParty/CasADi; \
+	make -f Makefile install "SWIGCHECK_BUILD_DIR=$(SWIGCHECK_BUILD_DIR)" "CASADI_BUILD_DIR=$(CASADI_BUILD_DIR64)" "IPOPT_HOME=$(IPOPT64_HOME)"
+	mkdir -p $(DESTDIR)$(prefix)/Python/
+	cp -r $(abs_builddir)/casadi_install64/casadi $(DESTDIR)$(prefix)/Python_64/
+	## temp fix
+	cp $(abs_builddir)/casadi_build64/swig/casadi_core.py $(DESTDIR)$(prefix)/Python_64/casadi
+	export PYTHONHOME=$(ORIG_PYTHON_HOME); \
+	export PATH="$(ORIG_PATH)";
+endif
 ## Install for CasADiInterface, Variables and targets. 
 ## MC_interface installs the system with Python. 
 ## If C++ compilation/tests are wanted there is the target MC_interface_cplusplus
@@ -66,13 +85,26 @@ OC_CASADI_BUILD=$(abs_builddir)/OptimicaCompilerCasADi
 
 # The modelica casadi interface is built into a build folder
 MC_BUILD=$(abs_builddir)/ModelicaCasADiInterfaceBuild
+MC_BUILD64=$(abs_builddir)/ModelicaCasADiInterfaceBuild64
 # Jars from the modified modelica and optimica compilers are put into the JModelica folder
 MC_COMPILERS_DIR=$(MC_BUILD)/JModelica.org
 MC_LIB=$(DESTDIR)$(prefix)/lib/casadi_interface
+MC_LIB64=$(DESTDIR)$(prefix)/lib/casadi_interface64
 
 CASADI_BUILD_DIR=$(abs_builddir)/casadi_build
+CASADI_BUILD_DIR64=$(abs_builddir)/casadi_build64
 SWIGCHECK_BUILD_DIR=$(abs_builddir)/swig_check
-
+SWIGCHECK_BUILD_DIR64=$(abs_builddir)/swig_check64
+CASADI_PYTHON_INST_DIR=$(abs_builddir)/casadi_install
+CASADI_INST_DIR=$(prefix)/ThirdParty/CasADi
+CASADI_PLUGIN_INST_DIR=$(CASADI_INST_DIR)/lib
+CASADI_PYTHON_INST_DIR64=$(abs_builddir)/casadi_install64
+CASADI_INST_DIR64=$(prefix)/ThirdParty/CasADi64
+CASADI_PLUGIN_INST_DIR64=$(CASADI_INST_DIR64)/lib
+CMAKE_CASADI_CXX_FLAG=-m32
+CMAKE_CASADI_COMPILER_ARGS=-m32 -mincoming-stack-boundary=2
+CMAKE_CASADI_CXX_FLAG64=-m64
+CMAKE_CASADI_COMPILER_ARGS64=-m64 -fpermissive
 
 casadi_interface: install_casadi_interface
 build_casadi_interface: casadi modelicacasadi_wrapper
@@ -91,6 +123,17 @@ ifcasadi: casadi
 	    -DIFCASADI_OUTDIR="$(MC_CASADI_BUILD)" -DCASADI_HOME="$(CASADI_HOME)" -DCASADI_BUILD_DIR="$(CASADI_BUILD_DIR)";; \
 	esac 
 	cd $(MC_BUILD)/ifcasadi;  make
+if COMPILE_WITH_IPOPT64
+	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:$(PYTHON64_HOME)/Lib:"${PATH}";
+	export PYTHONHOME=$(PYTHON64_HOME);
+	mkdir -p $(MC_BUILD64)/ifcasadi; \
+	cd $(MC_BUILD64)/ifcasadi; \
+	cmake $(MC_SRC_SWIG) -G "MSYS Makefiles" -DCMAKE_CXX_COMPILER_ARG1="-m64" -DCMAKE_CXX_FLAGS="-m64" \
+	    -DIFCASADI_OUTDIR="$(MC_CASADI_BUILD)" -DCASADI_HOME="$(CASADI_HOME)" -DCASADI_BUILD_DIR="$(CASADI_BUILD_DIR64)"; \
+	cd $(MC_BUILD64)/ifcasadi;  make
+	export PYTHONHOME=$(ORIG_PYTHON_HOME); \
+	export PATH="$(ORIG_PATH)";
+endif
 
 $(MC_LIB): $(MC_CASADI_BUILD)/bin/ModelicaCompiler.jar $(OC_CASADI_BUILD)/bin/OptimicaCompiler.jar $(MC_CASADI_BUILD)/bin/util.jar ifcasadi
 	rm -rf $(MC_LIB)
@@ -106,6 +149,14 @@ $(MC_LIB): $(MC_CASADI_BUILD)/bin/ModelicaCompiler.jar $(OC_CASADI_BUILD)/bin/Op
 	*) \
 	cp $(MC_BUILD)/ifcasadi/libifcasadi.so $(MC_LIB) ;; \
 	esac 
+if COMPILE_WITH_IPOPT64
+	rm -rf $(MC_LIB64)
+	mkdir -p $(MC_LIB64)
+	cp $(MC_CASADI_BUILD)/bin/ModelicaCompiler.jar $(MC_LIB64)
+	cp $(OC_CASADI_BUILD)/bin/OptimicaCompiler.jar $(MC_LIB64)
+	cp $(MC_CASADI_BUILD)/bin/util.jar $(MC_LIB64)
+	cp $(MC_BUILD64)/ifcasadi/ifcasadi.dll $(MC_LIB64)
+endif
 
 mc_modelica: ifcasadi
 	cd $(MC_CASADI_BUILD); $(ANT_OPTS) $(ANT) -f "$(JAVA_MC_CASADI_ANT_FILE)" "-Dcompiler=$(COMPILER_DIR)"
@@ -142,7 +193,19 @@ modelicacasadi_wrapper: $(MC_CASADI_BUILD)/bin/ModelicaCompiler.jar $(OC_CASADI_
 	    "$(CMAKE_PYTHON_LIB)" "$(CMAKE_PYTHON_INCLUDE)" ;; \
 	esac 
 	cd $(MC_BUILD)/modelicacasadi_wrapper;  make modelicacasadi_wrapper
-
+if COMPILE_WITH_IPOPT64
+	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:$(PYTHON64_HOME)/Lib:"${PATH}"; \
+	export PYTHONHOME=$(PYTHON64_HOME); \
+	mkdir -p $(MC_BUILD64)/modelicacasadi_wrapper; \
+	cd $(MC_BUILD64)/modelicacasadi_wrapper; \
+	cmake $(MC_INTERFACE) -G "MSYS Makefiles" -DCMAKE_CXX_COMPILER_ARG1="-m64" -DCMAKE_CXX_FLAGS="-m64" \
+	    -DMC_BUILD="$(MC_BUILD64)" -DIPOPT_HOME="$(IPOPT64_HOME)" -DCASADI_BUILD_DIR="$(CASADI_BUILD_DIR64)" \
+	    -DIFCASADI_JAR_BASE="$(JAVA_CASADI_BUILD_DIR)" -DCASADI_HOME="$(CASADI_HOME)" \
+	    "$(CMAKE_PYTHON64_LIB)" "$(CMAKE_PYTHON64_INCLUDE)"; \
+	cd $(MC_BUILD64)/modelicacasadi_wrapper;  make modelicacasadi_wrapper
+	export PYTHONHOME=$(ORIG_PYTHON_HOME);
+	export PATH="$(ORIG_PATH)";
+endif
 
  $(DESTDIR)$(prefix)/Python/modelicacasadi_transfer/__init__.py: install_modelicacasadi_transfer
  $(DESTDIR)$(prefix)/Python/modelicacasadi_transfer/modelica_casadi_transfer_wrapper.py: install_modelicacasadi_transfer
@@ -155,6 +218,17 @@ modelicacasadi_wrapper: $(MC_CASADI_BUILD)/bin/ModelicaCompiler.jar $(OC_CASADI_
 	rm -f $(DESTDIR)$(prefix)/Python/modelicacasadi_wrapper/__init__.py
 	touch $(DESTDIR)$(prefix)/Python/modelicacasadi_wrapper/__init__.py
 	echo "from modelicacasadi_wrapper import *" >> $(DESTDIR)$(prefix)/Python/modelicacasadi_wrapper/__init__.py
+if COMPILE_WITH_IPOPT64
+	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:$(PYTHON64_HOME)/Lib:"${PATH}"; \
+	export PYTHONHOME=$(PYTHON64_HOME);
+	mkdir -p $(DESTDIR)$(prefix)/Python_64/modelicacasadi_wrapper
+	cp $(MC_BUILD64)/modelicacasadi_wrapper/swig/*modelicacasadi_wrapper* $(DESTDIR)$(prefix)/Python_64/modelicacasadi_wrapper 
+	rm -f $(DESTDIR)$(prefix)/Python_64/modelicacasadi_wrapper/__init__.py
+	touch $(DESTDIR)$(prefix)/Python_64/modelicacasadi_wrapper/__init__.py
+	echo "from modelicacasadi_wrapper import *" >> $(DESTDIR)$(prefix)/Python_64/modelicacasadi_wrapper/__init__.py
+	export PYTHONHOME=$(ORIG_PYTHON_HOME)
+	export PATH="$(ORIG_PATH)"
+endif
 
  install_modelicacasadi_transfer: $(MC_INTERFACE)/python/modelica_casadi_transfer_wrapper.py 
 	mkdir -p $(DESTDIR)$(prefix)/Python/modelicacasadi_transfer
@@ -162,7 +236,14 @@ modelicacasadi_wrapper: $(MC_CASADI_BUILD)/bin/ModelicaCompiler.jar $(OC_CASADI_
 	touch $(DESTDIR)$(prefix)/Python/modelicacasadi_transfer/__init__.py
 	echo "from modelica_casadi_transfer_wrapper import *" >> $(DESTDIR)$(prefix)/Python/modelicacasadi_transfer/__init__.py
 	cp $(MC_INTERFACE)/python/modelica_casadi_transfer_wrapper.py $(DESTDIR)$(prefix)/Python/modelicacasadi_transfer
-
+if COMPILE_WITH_IPOPT64    
+	mkdir -p $(DESTDIR)$(prefix)/Python_64/modelicacasadi_transfer
+	rm -f $(DESTDIR)$(prefix)/Python_64/modelicacasadi_transfer/__init__.py
+	touch $(DESTDIR)$(prefix)/Python_64/modelicacasadi_transfer/__init__.py
+	echo "from modelica_casadi_transfer_wrapper import *" >> $(DESTDIR)$(prefix)/Python_64/modelicacasadi_transfer/__init__.py
+	cp $(MC_INTERFACE)/python/modelica_casadi_transfer_wrapper.py $(DESTDIR)$(prefix)/Python_64/modelicacasadi_transfer
+endif
+        
 if NUMPY_NO_MSVCR
 NUMPY_NO_MSVCR_ARG=--no-msvcr="true"
 else
@@ -191,11 +272,11 @@ if WITH_PYTHON64
 	cd $(abs_top_srcdir)/external; \
 	find Assimulo -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(assimulo_build_dir64); \
 	cd $(assimulo_build_dir)/Assimulo; \
-	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:"${PATH}"; \
-	export PYTHON_HOME=$(PYTHON64_HOME); \
+	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:$(PYTHON64_HOME)/Lib:"${PATH}"; \
+	export PYTHONHOME=$(PYTHON64_HOME); \
 	python setup.py install --with_openmp=True --superlu-home=$(abs_builddir)/superlu_build64/ --sundials-home=$(SUNDIALS_HOME)64 --sundials-with-superlu=True --blas-home=$(abs_builddir)/blas_install64/ --lapack-home=$(abs_builddir)/lapack_install64/ --force-32bit="false" $(NUMPY_NO_MSVCR_ARG) --prefix=$(assimulo_install_dir64); \
 	export PATH="$(ORIG_PATH)"; \
-	export PYTHON_HOME=$(ORIG_PYTHON_HOME)
+	export PYTHONHOME=$(ORIG_PYTHON_HOME)
 endif
 endif
 endif
@@ -220,11 +301,11 @@ if WITH_PYTHON64
 	cd $(abs_top_srcdir)/external; \
 	find Assimulo -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(assimulo_build_dir64); \
 	cd $(assimulo_build_dir64)/Assimulo; \
-	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:"${PATH}"; \
-	export PYTHON_HOME=$(PYTHON64_HOME); \
+	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:$(PYTHON64_HOME)/Lib:"${PATH}"; \
+	export PYTHONHOME=$(PYTHON64_HOME); \
 	python setup.py install --sundials-home=$(SUNDIALS_HOME)64 --blas-home=$(abs_builddir)/blas_install64/ --lapack-home=$(abs_builddir)/lapack_install64/ --force-32bit="false" $(NUMPY_NO_MSVCR_ARG) --prefix=$(assimulo_install_dir64) ; \
 	export PATH="$(ORIG_PATH)"; \
-	export PYTHON_HOME=$(ORIG_PYTHON_HOME)
+	export PYTHONHOME=$(ORIG_PYTHON_HOME)
 endif
 endif
 endif
@@ -235,11 +316,11 @@ endif
 if JM_WIN64
 if WITH_PYTHON64
 	cd $(abs_top_srcdir)/Python/src; \
-	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:"${PATH}"; \
-	export PYTHON_HOME=$(PYTHON64_HOME); \
+	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:$(PYTHON64_HOME)/Lib:"${PATH}"; \
+	export PYTHONHOME=$(PYTHON64_HOME); \
 	python setup_pymodelica.py install --prefix=$(pymodelica_install_dir64); \
 	export PATH="$(ORIG_PATH)"; \
-	export PYTHON_HOME=$(ORIG_PYTHON_HOME); \
+	export PYTHONHOME=$(ORIG_PYTHON_HOME); \
 	rm -rf build
 endif
 endif
@@ -262,11 +343,11 @@ if WITH_PYTHON64
 	cd $(abs_top_srcdir)/external; \
 	find PyFMI -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(pyfmi_build_dir64); \
 	cd $(pyfmi_build_dir64)/PyFMI; \
-	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:"${PATH}"; \
-	export PYTHON_HOME=$(PYTHON64_HOME); \
+	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:$(PYTHON64_HOME)/Lib:"${PATH}"; \
+	export PYTHONHOME=$(PYTHON64_HOME); \
 	python setup.py install --fmil-home=$(abs_builddir)/FMIL_install64/ $(NUMPY_NO_MSVCR_ARG) --prefix=$(pyfmi_install_dir64); \
 	export PATH="$(ORIG_PATH)"; \
-	export PYTHON_HOME=$(ORIG_PYTHON_HOME); \
+	export PYTHONHOME=$(ORIG_PYTHON_HOME); \
 	rm -rf build
 endif
 endif
@@ -276,11 +357,11 @@ endif
 if JM_WIN64
 if WITH_PYTHON64
 	cd $(abs_top_srcdir)/Python/src; \
-	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:"${PATH}"; \
-	export PYTHON_HOME=$(PYTHON64_HOME); \
+	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:$(PYTHON64_HOME)/Lib:"${PATH}"; \
+	export PYTHONHOME=$(PYTHON64_HOME); \
 	python setup_pyjmi.py install --prefix=$(pyjmi_install_dir64); \
 	export PATH="$(ORIG_PATH)"; \
-	export PYTHON_HOME=$(ORIG_PYTHON_HOME); \
+	export PYTHONHOME=$(ORIG_PYTHON_HOME); \
 	rm -rf build
 endif
 endif
@@ -290,9 +371,11 @@ install-python-packages: build-python-packages
 	cp Python/src/required_defaults.py $(DESTDIR)$(prefix)/Python/
 	[ $(abs_top_srcdir) == $(DESTDIR)$(prefix) ] && echo "Installing in dist directory, don't copy LICENSE file" || cp $(abs_top_srcdir)/Python/LICENSE $(DESTDIR)$(prefix)/Python
 if JM_WIN64
+if WITH_PYTHON64
 	mkdir -p $(DESTDIR)$(prefix)/Python_64
 	cp Python/src/required_defaults.py $(DESTDIR)$(prefix)/Python_64/
 	[ $(abs_top_srcdir) == $(DESTDIR)$(prefix) ] && echo "Installing in dist directory, don't copy LICENSE file" || cp $(abs_top_srcdir)/Python/LICENSE $(DESTDIR)$(prefix)/Python_64
+endif
 endif
 if WITH_SUNDIALS
 	for pkgdir in lib/python2.5 lib/python2.6 lib/python2.7 lib64/python2.5 lib64/python2.6 lib64/python2.7 Lib; do \
@@ -528,6 +611,7 @@ clean-local: clean-frontends clean-python-packages clean-casadi-interface
 
 clean-casadi-interface: 
 	rm -rf $(MC_BUILD)
+	rm -rf $(MC_BUILD64)
 #	rm -rf $(DESTDIR)$(prefix)/Python/casadi
 #	rm -rf $(DESTDIR)$(prefix)/Python/modelicacasadi_transfer
 if HAVE_ANT
